--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Batalla Guitar Hero: Yngwie vs el Mundo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Fuente retro tipo arcade -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
 
@@ -61,7 +60,6 @@
       overflow: hidden;
     }
 
-    /* Líneas diagonales retro */
     .card::before {
       content: "";
       position: absolute;
@@ -88,6 +86,8 @@
       opacity: 0.85;
       margin-bottom: 16px;
       font-size: 0.9rem;
+      position: relative;
+      z-index: 1;
     }
 
     .badge {
@@ -99,6 +99,8 @@
       border: 1px solid rgba(255,255,255,0.2);
       border-radius: 999px;
       font-size: 0.75rem;
+      position: relative;
+      z-index: 1;
     }
 
     .center-row {
@@ -160,6 +162,8 @@
       letter-spacing: 0.12em;
       opacity: 0.9;
       font-family: "Press Start 2P", system-ui, sans-serif;
+      position: relative;
+      z-index: 1;
     }
 
     .question {
@@ -167,6 +171,8 @@
       border-radius: 12px;
       padding: 10px 12px;
       border: 1px solid rgba(255,255,255,0.18);
+      position: relative;
+      z-index: 1;
     }
 
     .question-title {
@@ -227,14 +233,16 @@
       z-index: 1;
     }
 
-    .hidden { display: none; }
+    .hidden {
+      display: none !important;
+    }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to   { opacity: 1; transform: translateY(0);   }
     }
 
-    /* Pantalla de medalla / resultado final */
+    /* Overlay resultado */
     .medal-overlay {
       position: fixed;
       inset: 0;
@@ -265,16 +273,21 @@
 
     .medal-title {
       font-family: "Press Start 2P", system-ui, sans-serif;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       margin-bottom: 6px;
     }
 
     .medal-text {
       font-size: 0.85rem;
       opacity: 0.9;
+      margin-bottom: 8px;
     }
 
-    /* Confeti simple */
+    .medal-extra {
+      font-size: 0.8rem;
+      opacity: 0.8;
+    }
+
     .confetti-piece {
       position: absolute;
       width: 6px;
@@ -302,7 +315,7 @@
 <body>
 <div class="app">
 
-  <!-- PANTALLA DE INICIO -->
+  <!-- PANTALLA INICIO -->
   <div class="card" id="startScreen">
     <div style="display:flex; justify-content:center; margin-bottom:12px; position:relative; z-index:1;">
       <img src="yngwie.jpg"
@@ -310,13 +323,13 @@
            style="max-width:320px; width:100%; border-radius:14px; box-shadow:0 0 26px rgba(255,0,0,0.55);">
     </div>
 
-    <div class="center-row" style="position:relative; z-index:1;">
+    <div class="center-row">
       <span class="badge">🤘 Noche de shred entre colegas</span>
     </div>
 
     <h1>Batalla Guitar Hero</h1>
     <p class="subtitle">
-      Yngwie contra el mundo. 10 preguntas, estilo arcade retro y ranking de la peña.
+      Yngwie contra el mundo. 10 preguntas, estilo arcade retro y ranking.
     </p>
 
     <div class="center-row">
@@ -328,16 +341,16 @@
     </div>
 
     <div id="rules" class="result hidden">
-      10 preguntas en 2 rondas. A = 3 pts, B = 2, C = 1.
-      Guarda tu puntuación y montad el ranking guitarrero de la noche.
+      No hay respuestas correctas, solo estilos. Cuenta qué eliges más: A (Yngwie),
+      B (shred equilibrado) o C (caos metalero) y te damos tu “clase” de guitarrista.
     </div>
   </div>
 
-  <!-- PANTALLA DE JUEGO -->
+  <!-- PANTALLA JUEGO -->
   <div class="card hidden" id="gameScreen">
     <h1>Batalla Guitar Hero ⚔️🎸</h1>
 
-    <!-- Vídeo YouTube -->
+    <!-- Video -->
     <div style="display:flex; justify-content:center; margin:14px 0; position:relative; z-index:1;">
       <div style="max-width:560px; width:100%; aspect-ratio:16/9;">
         <iframe
@@ -351,25 +364,25 @@
     </div>
 
     <p class="subtitle">
-      Responde sin miedo, escucha los clics retro y destruye el ranking.
+      Responde sin pensar demasiado y descubre qué tipo de metalero eres.
     </p>
 
     <div id="questions" class="questions"></div>
 
     <div class="footer">
-      <button id="btnCalcular" class="btn-primary">Ver resultado 🤘</button>
-      <button id="btnReset" class="btn-ghost">Reiniciar</button>
-      <button id="btnBack" class="btn-ghost">Volver</button>
-      <button id="btnCopiar" class="btn-ghost">Copiar</button>
+      <button id="btnResult" class="btn-primary">Ver mi estilo 🤘</button>
+      <button id="btnReset"  class="btn-ghost">Reiniciar</button>
+      <button id="btnBack"   class="btn-ghost">Volver</button>
+      <button id="btnCopy"   class="btn-ghost">Copiar</button>
     </div>
 
-    <div id="result" class="result hidden"></div>
+    <div id="resultBox" class="result hidden"></div>
 
     <div style="display:flex; gap:8px; justify-content:center; margin-top:12px; position:relative; z-index:1;">
       <input id="playerName" type="text" placeholder="Tu nombre"
              style="padding:6px 10px; border-radius:12px; border:1px solid rgba(255,255,255,0.4);
                     background:rgba(0,0,0,0.7); color:#fff;">
-      <button id="btnSave" class="btn-primary">Guardar 🏆</button>
+      <button id="btnSave" class="btn-primary">Guardar en ranking 🏆</button>
     </div>
 
     <div id="ranking" class="ranking hidden">
@@ -378,12 +391,13 @@
     </div>
   </div>
 
-  <!-- Overlay de medalla -->
+  <!-- OVERLAY RESULTADO -->
   <div id="medalOverlay" class="medal-overlay hidden">
     <div class="medal-card" id="medalCard">
-      <div id="medalEmoji" class="medal-emoji">🏅</div>
-      <div id="medalTitle" class="medal-title">Rango</div>
+      <div id="medalEmoji" class="medal-emoji">🎸</div>
+      <div id="medalTitle" class="medal-title">Tu estilo</div>
       <p id="medalText" class="medal-text"></p>
+      <p id="medalExtra" class="medal-extra"></p>
       <button id="btnCloseMedal" class="btn-primary" style="margin-top:12px;">Cerrar</button>
     </div>
   </div>
@@ -391,18 +405,21 @@
 </div>
 
 <script>
-  // Referencias DOM
+document.addEventListener("DOMContentLoaded", () => {
+  // Elementos principales
   const startScreen   = document.getElementById("startScreen");
   const gameScreen    = document.getElementById("gameScreen");
   const btnStart      = document.getElementById("btnStart");
   const btnShowRules  = document.getElementById("btnShowRules");
   const rules         = document.getElementById("rules");
+
   const questionsBox  = document.getElementById("questions");
-  const btnCalcular   = document.getElementById("btnCalcular");
+  const btnResult     = document.getElementById("btnResult");
   const btnReset      = document.getElementById("btnReset");
   const btnBack       = document.getElementById("btnBack");
-  const btnCopiar     = document.getElementById("btnCopiar");
-  const resultBox     = document.getElementById("result");
+  const btnCopy       = document.getElementById("btnCopy");
+  const resultBox     = document.getElementById("resultBox");
+
   const playerNameInp = document.getElementById("playerName");
   const btnSave       = document.getElementById("btnSave");
   const rankingBox    = document.getElementById("ranking");
@@ -413,8 +430,10 @@
   const medalEmoji    = document.getElementById("medalEmoji");
   const medalTitle    = document.getElementById("medalTitle");
   const medalText     = document.getElementById("medalText");
+  const medalExtra    = document.getElementById("medalExtra");
   const btnCloseMedal = document.getElementById("btnCloseMedal");
 
+  // Sonido sencillo tipo click retro
   let audioCtx = null;
   function playClick() {
     try {
@@ -428,9 +447,7 @@
       gain.connect(audioCtx.destination);
       osc.start();
       osc.stop(audioCtx.currentTime + 0.07);
-    } catch (e) {
-      // Si falla, no pasa nada
-    }
+    } catch (e) {}
   }
 
   // Pantallas
@@ -453,7 +470,7 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   });
 
-  // Preguntas completas
+  // Preguntas (10)
   const preguntasHTML = `
     <div class="round-title">Ronda 1 – Calentamiento infernal</div>
 
@@ -461,7 +478,7 @@
       <div class="question-title">1. Yngwie vs. Steve Vai – “La Dimensión del Solo Infinito”</div>
       <div class="question-sub">¿Quién domina el multiverso guitarrístico?</div>
       <label class="option"><input type="radio" name="q1" value="A"> A) Yngwie, porque MORE IS MORE en todos los universos.</label>
-      <label class="option"><input type="radio" name="q1" value="B"> B) Vai, porque tiene pedales que hablan idiomas imposibles.</label>
+      <label class="option"><input type="radio" name="q1" value="B"> B) Vai, con pedales que hablan idiomas imposibles.</label>
       <label class="option"><input type="radio" name="q1" value="C"> C) Se abre un portal y salen más solos.</label>
     </div>
 
@@ -477,14 +494,14 @@
       <div class="question-title">3. Yngwie vs. Joe Satriani – “El Duelo de los Extraterrestres”</div>
       <div class="question-sub">¿Quién manda en la galaxia sonora?</div>
       <label class="option"><input type="radio" name="q3" value="A"> A) Yngwie: densidad de notas extrema.</label>
-      <label class="option"><input type="radio" name="q3" value="B"> B) Satriani no es humano.</label>
+      <label class="option"><input type="radio" name="q3" value="B"> B) Satriani directamente no es humano.</label>
       <label class="option"><input type="radio" name="q3" value="C"> C) Llegan aliens a pedirles clases.</label>
     </div>
 
     <div class="question">
       <div class="question-title">4. Yngwie vs. Dimebag Darrell – “Guisos de Armónicos Artificiales”</div>
       <div class="question-sub">¿Quién gana?</div>
-      <label class="option"><input type="radio" name="q4" value="A"> A) Yngwie: rompe la sartén con un arpegio.</label>
+      <label class="option"><input type="radio" name="q4" value="A"> A) Yngwie rompe la sartén con un arpegio.</label>
       <label class="option"><input type="radio" name="q4" value="B"> B) Dimebag rompe móviles con un squeal.</label>
       <label class="option"><input type="radio" name="q4" value="C"> C) El técnico dimite.</label>
     </div>
@@ -542,81 +559,92 @@
 
   questionsBox.innerHTML = preguntasHTML;
 
-  // Sonido al marcar opciones
+  // Sonido al elegir
   questionsBox.addEventListener("change", (e) => {
-    if (e.target.matches('input[type="radio"]')) {
-      playClick();
-    }
+    if (e.target.matches('input[type="radio"]')) playClick();
   });
 
-  function calcular() {
-    let total = 0, A = 0, B = 0, C = 0;
+  function contarRespuestas() {
+    let A = 0, B = 0, C = 0;
     for (let i = 1; i <= 10; i++) {
       const sel = document.querySelector(`input[name="q${i}"]:checked`);
       if (!sel) return null;
-      if (sel.value === "A") { total += 3; A++; }
-      if (sel.value === "B") { total += 2; B++; }
-      if (sel.value === "C") { total += 1; C++; }
+      if (sel.value === "A") A++;
+      if (sel.value === "B") B++;
+      if (sel.value === "C") C++;
     }
-    return { total, A, B, C };
+    return { A, B, C };
   }
 
-  function rangoPara(total) {
-    if (total <= 10) return {
-      titulo: "Aprendiz del Riff",
-      texto: "Te falta rodaje, pero la actitud metalera ya está cargando.",
-      emoji: "🎸"
-    };
-    if (total <= 18) return {
-      titulo: "Shredder Oficial",
-      texto: "Tus solos ya molestan a los vecinos y eso es buena señal.",
-      emoji: "⚡"
-    };
-    if (total <= 25) return {
-      titulo: "Destructor de Metrónomos",
-      texto: "Piensas en BPM incluso al subir las escaleras.",
-      emoji: "🔥"
-    };
-    return {
-      titulo: "Maestro del Caos Neoclásico",
-      texto: "Los amplis te respetan, las púas te temen y el ego está en 11.",
-      emoji: "🏆"
-    };
+  function calcularEstilo() {
+    const res = contarRespuestas();
+    if (!res) return null;
+    const { A, B, C } = res;
+
+    let estilo = "";
+    let texto  = "";
+    let emoji  = "";
+    // Afinidad dominante
+    if (A > B && A > C) {
+      estilo = "Discípulo de Yngwie";
+      texto  = "Virtuoso, barroco, excesivo y orgulloso. MORE IS MORE.";
+      emoji  = "🔥";
+    } else if (B > A && B > C) {
+      estilo = "Shredder Balanceado";
+      texto  = "Técnico pero con cabeza. Sabes cuándo volar y cuándo groovear.";
+      emoji  = "⚡";
+    } else if (C > A && C > B) {
+      estilo = "Caótico Metalero Neutral";
+      texto  = "Buscas el caos divertido. Importa más la anécdota que la escala.";
+      emoji  = "💀";
+    } else {
+      estilo = "Guerrero del Shred Multiverso";
+      texto  = "No se te puede etiquetar. Eres mezcla de todo: puro multiverso guitarrero.";
+      emoji  = "🌌";
+    }
+
+    const total = A + B + C;
+    const pA = Math.round((A / total) * 100);
+    const pB = Math.round((B / total) * 100);
+    const pC = 100 - pA - pB;
+
+    return { A, B, C, estilo, texto, emoji, pA, pB, pC };
   }
 
-  function lanzarConfeti() {
+  function mostrarConfeti() {
     medalCard.querySelectorAll(".confetti-piece").forEach(el => el.remove());
     const colores = ["#ff2e63","#ff9f1c","#00f5d4","#f15bb5","#fee440"];
-    for (let i = 0; i < 35; i++) {
+    for (let i = 0; i < 30; i++) {
       const piece = document.createElement("div");
       piece.className = "confetti-piece";
       piece.style.left = Math.random() * 100 + "%";
-      piece.style.background = colores[Math.floor(Math.random()*colores.length)];
-      piece.style.animationDelay = (Math.random()*0.4) + "s";
+      piece.style.background = colores[Math.floor(Math.random() * colores.length)];
+      piece.style.animationDelay = (Math.random() * 0.4) + "s";
       medalCard.appendChild(piece);
     }
   }
 
-  btnCalcular.addEventListener("click", () => {
+  btnResult.addEventListener("click", () => {
     playClick();
-    const r = calcular();
-    if (!r) {
-      alert("Responde todas las preguntas antes de ver el resultado.");
+    const info = calcularEstilo();
+    if (!info) {
+      alert("Responde las 10 preguntas primero.");
       return;
     }
-    const rango = rangoPara(r.total);
+    const { A, B, C, estilo, texto, emoji, pA, pB, pC } = info;
+
     resultBox.classList.remove("hidden");
     resultBox.innerHTML =
-      `<strong>${rango.titulo}</strong><br>` +
-      `Puntos: ${r.total}/30<br>` +
-      `<small>A=${r.A}, B=${r.B}, C=${r.C}</small>`;
+      `<strong>${estilo}</strong><br>` +
+      `Afinidad: A=${A}, B=${B}, C=${C} (` +
+      `${pA}% Yngwie / ${pB}% Shred / ${pC}% Caos).`;
 
-    // Pantalla de medalla
-    medalEmoji.textContent = rango.emoji;
-    medalTitle.textContent = rango.titulo;
-    medalText.textContent = rango.texto;
+    medalEmoji.textContent = emoji;
+    medalTitle.textContent = estilo;
+    medalText.textContent  = texto;
+    medalExtra.textContent = `Yngwie: ${pA}%, Shred: ${pB}%, Caos: ${pC}%.`;
     medalOverlay.classList.remove("hidden");
-    lanzarConfeti();
+    mostrarConfeti();
   });
 
   btnCloseMedal.addEventListener("click", () => {
@@ -628,34 +656,36 @@
     playClick();
     document.querySelectorAll('input[type="radio"]').forEach(r => r.checked = false);
     resultBox.classList.add("hidden");
+    medalOverlay.classList.add("hidden");
   });
 
-  btnCopiar.addEventListener("click", async () => {
+  btnCopy.addEventListener("click", async () => {
     playClick();
-    const r = calcular();
-    if (!r) return;
-    const texto = `Mi puntuación en Batalla Guitar Hero: ${r.total}/30 🤘`;
+    const info = calcularEstilo();
+    if (!info) return;
+    const texto =
+      `Mi estilo en Batalla Guitar Hero: ${info.estilo} ` +
+      `(Yngwie ${info.pA}%, Shred ${info.pB}%, Caos ${info.pC}%) 🤘`;
     try {
       await navigator.clipboard.writeText(texto);
       alert("Resultado copiado. Pega en el grupo y que empiece el pique.");
-    } catch (e) {
-      console.error(e);
-    }
+    } catch (e) {}
   });
 
   const ranking = [];
   btnSave.addEventListener("click", () => {
     playClick();
-    const r = calcular();
-    if (!r) return;
+    const info = calcularEstilo();
+    if (!info) return;
     const nombre = (playerNameInp.value || "Jugador").trim();
-    ranking.push({ nombre, puntos: r.total });
-    ranking.sort((a, b) => b.puntos - a.puntos);
+    ranking.push({ nombre, estilo: info.estilo });
+    // sin ordenar, para que salgan en orden de juego; o podríamos ordenar por estilo
     rankingList.innerHTML = ranking
-      .map(p => `<li>${p.nombre} – ${p.puntos} pts</li>`)
+      .map(p => `<li>${p.nombre} – ${p.estilo}</li>`)
       .join("");
     rankingBox.classList.remove("hidden");
   });
+});
 </script>
 
 </body>
