--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
     <h1>Batalla Guitar Hero</h1>
     <p class="subtitle">
-      Yngwie contra el mundo. 10 preguntas, estilo arcade retro y ranking.
+      Yngwie contra el mundo
     </p>
 
     <div class="center-row">
